# SGXmer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
App/: App.cpp  CMakeLists.txt
App/Utility/: InputParser.cpp  InputParser.h
Enclave/: CMakeLists.txt  Enclave.cpp  Enclave.edl
Include/: CommonStructs.h  Constants.h  GlobalVariables.h
wamr/: CMakeLists.txt
